# serializer version: 1
# name: test_parse_main_plus_fea_delta
  dict({
    'TspBdy0': dict({
      'current_temperature': '82.0',
      'entity_category': None,
      'is_on': False,
      'label': 'Pool',
      'target_temperature': '88.0',
      'temperature_unit': 'F',
      'type': 'TcxClimate',
    }),
    'air': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Air Temperature',
      'state_class': None,
      'type': 'TcxAirSensor',
      'unit_of_measurement': None,
      'value': '72',
      'value_translated': None,
    }),
    'aux0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Waterfall',
      'type': 'TcxAuxSwitch',
    }),
    'ecm0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Variable Speed Pump',
      'percentage': 69,
      'preset_mode': None,
      'preset_modes': list([
        'Low',
        'Med',
        'High',
      ]),
      'type': 'TcxVariableSpeedPump',
    }),
    'ecm0_frzSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Freeze-Protect Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '1200',
      'value_translated': None,
    }),
    'ecm0_manSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Manual Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'ecm0_prmSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Priming Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '3450',
      'value_translated': None,
    }),
    'ecm0_qcSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Quick-Clean Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '3450',
      'value_translated': None,
    }),
    'feaCircuit0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Spa Jets',
      'type': 'TcxFeatureCircuit',
    }),
    'feaCircuit1': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Spa Light',
      'type': 'TcxFeatureCircuit',
    }),
    'filt0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Filter Pump',
      'type': 'TcxFilterPump',
    }),
    'lvh1': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Lvh1',
      'state_class': None,
      'type': 'TcxGenericSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'solar': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Solar Panel',
      'state_class': None,
      'type': 'TcxSolarSensor',
      'unit_of_measurement': None,
      'value': '105.0',
      'value_translated': None,
    }),
    'swc0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Salt Chlorinator',
      'type': 'TcxChlorinatorBoost',
    }),
    'water': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Water',
      'state_class': None,
      'type': 'TcxWaterSensor',
      'unit_of_measurement': None,
      'value': '82.0',
      'value_translated': None,
    }),
  })
# ---
# name: test_parse_main_shadow
  dict({
    'TspBdy0': dict({
      'current_temperature': '82.0',
      'entity_category': None,
      'is_on': False,
      'label': 'Pool',
      'target_temperature': '88.0',
      'temperature_unit': 'F',
      'type': 'TcxClimate',
    }),
    'air': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Air Temperature',
      'state_class': None,
      'type': 'TcxAirSensor',
      'unit_of_measurement': None,
      'value': '72',
      'value_translated': None,
    }),
    'aux0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Waterfall',
      'type': 'TcxAuxSwitch',
    }),
    'ecm0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Variable Speed Pump',
      'percentage': 69,
      'preset_mode': None,
      'preset_modes': list([
        'Low',
        'Med',
        'High',
      ]),
      'type': 'TcxVariableSpeedPump',
    }),
    'ecm0_frzSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Freeze-Protect Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '1200',
      'value_translated': None,
    }),
    'ecm0_manSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Manual Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '0',
      'value_translated': None,
    }),
    'ecm0_prmSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Priming Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '3450',
      'value_translated': None,
    }),
    'ecm0_qcSpd': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Fan Quick-Clean Speed',
      'state_class': None,
      'type': 'TcxSpeedSensor',
      'unit_of_measurement': None,
      'value': '3450',
      'value_translated': None,
    }),
    'filt0': dict({
      'entity_category': None,
      'is_on': True,
      'label': 'Filter Pump',
      'type': 'TcxFilterPump',
    }),
    'lvh1': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Lvh1',
      'state_class': None,
      'type': 'TcxGenericSensor',
      'unit_of_measurement': None,
      'value': '',
      'value_translated': None,
    }),
    'solar': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Solar Panel',
      'state_class': None,
      'type': 'TcxSolarSensor',
      'unit_of_measurement': None,
      'value': '105.0',
      'value_translated': None,
    }),
    'swc0': dict({
      'entity_category': None,
      'is_on': False,
      'label': 'Salt Chlorinator',
      'type': 'TcxChlorinatorBoost',
    }),
    'water': dict({
      'device_class': None,
      'entity_category': None,
      'label': 'Pool Water',
      'state_class': None,
      'type': 'TcxWaterSensor',
      'unit_of_measurement': None,
      'value': '82.0',
      'value_translated': None,
    }),
  })
# ---
